# SPL

./: .gitignore  CMakeLists.txt  Include.cmake  IncludeLists.txt  README  Src.cmake  SrcLists.txt
cmake/: .utility.cmake.swp  SPLConfig.cmake.in  SPLConfigVersion.cmake.in  external_Schemer.cmake  utility.cmake
include/: CMakeLists.txt  SSLib.h  SSLibAssert.h  SSLibConfig.h  SSLibConfig.h.in  SSLibTypes.h
include/analysis/: SpaceGroup.h  VoronoiMap.h
include/build_cell/: AbstractConstraintDescription.h  AtomConstraintDescription.h  AtomExtruder.h  AtomGroupDescription.h  AtomsDescription.h  BlueprintStructureGenerator.h  CellConstraintDescription.h  ConstStructureDescriptionVisitor.h  ConstVisitorGroup.h  ConstraintDescriptionId.h  DefaultCrystalGenerator.h  DistanceConstraintChecker.h  IAtomConstrainable.h  ICellGenerator.h  IConstraintDescription.h  IStructureGenerator.h  IUnitCellBlueprint.h  Minsep.h  RandomAtomPositioner.h  (+11 more)
src/: CMakeLists.txt  SSLibConfig.h  SSLibConfig.h.in
src/analysis/: AnchorArrangement.cpp  ArrangementSmoothing.cpp  ConvexHull.cpp  ConvexHullStructures.cpp  GnuplotConvexHullPlotter.cpp  Histogram.cpp  SpaceGroup.cpp  StructureConvexHullInfoSupplier.cpp  StructureTriangulation.cpp  VoronoiMap.cpp
src/build_cell/: AbsAtomsGenerator.cpp  AbstractConstraintDescription.cpp  AtomConstraintDescription.cpp  AtomExtruder.cpp  AtomGroupDescription.cpp  AtomsDescription.cpp  AtomsGroup.cpp  BlueprintStructureGenerator.cpp  BuildAtomInfo.cpp  CellConstraintDescription.cpp  ConstVisitorGroup.cpp  DefaultCrystalGenerator.cpp  DistanceConstraintChecker.cpp  GenBox.cpp  GenCylinder.cpp  GenSphere.cpp  GeneratorShape.cpp  Minsep.cpp  PointGroups.cpp  PointSeparator.cpp  RandomAtomPositioner.cpp  RandomUnitCell.cpp  RandomUnitCellGenerator.cpp  Sphere.cpp  StructureBuild.cpp  StructureBuilder.cpp  StructureConstraintDescription.cpp  StructureDescription.cpp  StructureDescriptionMap.cpp  SymmetryFunctions.cpp  SymmetryGroup.cpp  SymmetryGroupBuilder.cpp  Utility.cpp  VisitorGroup.cpp  VoronoiSlabGenerator.cpp  VoronoiSlabRegions.cpp
src/common/: Atom.cpp  AtomGroup.cpp  AtomSpeciesDatabase.cpp  AtomSpeciesId.cpp  AtomSpeciesInfo.cpp  AtomsFormula.cpp  Constants.cpp  DistanceCalculator.cpp  DistanceCalculatorDelegator.cpp  OrthoCellDistanceCalculator.cpp  ReferenceDistanceCalculator.cpp  Structure.cpp  StructureProperties.cpp  StructureTreeEvent.cpp  UnitCell.cpp  UnitCellFactory.cpp  UniversalCrystalDistanceCalculator.cpp  Utils.cpp
src/common/event/: AtomGroupEvent.cpp  PropertyChangeEvent.cpp  PropertyChangeSupport.cpp
src/factory/: AbstractInputObject.cpp  GenShapeFactory.cpp  Scalar.cpp  SchemaDoc.cpp  SchemaElement.cpp  SchemaList.cpp  SchemaMap.cpp  SchemaMapSingle.cpp  SchemaObjectUid.cpp  SchemaScalarValue.cpp  SchemaScalarValueAny.cpp  SchemaScalarValueLiteral.cpp  SsLibElements.cpp  SsLibFactoryYaml.cpp
src/io/: AdditionalData.cpp  AtomFormatParser.cpp  AtomYamlFormatParser.cpp  BoostFilesystem.cpp  CastepReader.cpp  CellReaderWriter.cpp  InfoLine.cpp  IoFunctions.cpp  Parsing.cpp  ResReaderWriter.cpp  ResourceLocator.cpp  SplReaderWriter.cpp  SslibReaderWriter.cpp  StructureReadWriteManager.cpp  StructureWriterManager.cpp  StructureYamlGenerator.cpp  XyzReaderWriter.cpp
src/math/: Geometry.cpp  Matrix.cpp  Random.cpp  RunningStats.cpp
src/os/: Process.cpp
src/potential/: CastepGeomOptimiser.cpp  CastepRun.cpp  CombiningRules.cpp  ExternalOptimiser.cpp  FixedLatticeShapeConstraint.cpp  LennardJones.cpp  LennardJonesData.cpp  OptimisationSettings.cpp  PotentialData.cpp  SimplePairPotential.cpp  SimplePairPotentialData.cpp  StructureProperties.cpp  TpsdGeomOptimiser.cpp
src/utility/: Armadillo.cpp  BoostFilesystem.cpp  DistanceMatrixComparator.cpp  HeterogeneousMap.cpp  HeterogeneousMapKey.cpp  NamedProperty.cpp  Outcome.cpp  SortedDistanceComparator.cpp  SortedDistanceComparatorEx.cpp  StableComparison.cpp  UniqueStructureSet.cpp  UtilFunctions.cpp
src/yaml/: ProgramOptions.cpp  TranscodeFactory.cpp  TranscodeGeneral.cpp  TranscodeIo.cpp
tests/: CMakeLists.txt  sslibtest.cpp  sslibtest.h
tests/analysis/: MatplotlibMapOutputterTest.cpp  SpaceGroupTest.cpp  VoronoiMapTest.cpp  VoronoiPathTracerTest.cpp
tests/build_cell/: AtomExtruderTest.cpp  StructureBuilderTest.cpp
tests/common/: DistanceCalculatorsTest.cpp  UnitCellTest.cpp
tests/factory/: RandomStructure.sslib  YamlFactoryTest.cpp
tests/factory/input/: RandomStructure.yaml
tests/io/: ReaderWriterTest.cpp
tests/potential/: CastepGeomOptimiserTest.cpp  CastepRunTest.cpp  ExternalOptimiserTest.cpp  LennardJonesTest.cpp
tests/potential/input/: external_optimiser.sh  run1.castep  run2.castep  run3.castep  run4.castep
tests/utility/: DistanceComparatorsTest.cpp  HeterogeneousMapTest.cpp  MultiIdxRangeTest.cpp  MultiIdxTest.cpp  MultiRangeTest.cpp  PermutationRangeTest.cpp  StructureComparatorsTest.cpp
tests/utility/input/similarStructures/: 10.res  160.vasp.res  172.vasp.res  251.vasp.res  259.vasp.res  260.vasp.res  261.vasp.res  263.vasp.res  267.vasp.res  268.vasp.res  269.vasp.res  270.vasp.res  272.vasp.res  273.vasp.res  275.vasp.res  276.vasp.res  277.vasp.res  279.vasp.res  280.vasp.res  282.vasp.res  283.vasp.res  284.vasp.res  287.vasp.res  288.vasp.res  289.vasp.res  290.vasp.res  292.vasp.res  293.vasp.res  294.vasp.res  298.vasp.res  299.vasp.res  301.vasp.res  302.vasp.res  306.vasp.res  307.vasp.res  309.vasp.res  310.vasp.res  312.vasp.res  313.vasp.res  314.vasp.res  (+117 more)
tests/utility/similarStructures/: 167.vasp.res  256.vasp.res  257.vasp.res  258.vasp.res  262.vasp.res  264.vasp.res  265.vasp.res  266.vasp.res  271.vasp.res  274.vasp.res  278.vasp.res  281.vasp.res  285.vasp.res  286.vasp.res  291.vasp.res  295.vasp.res  296.vasp.res  297.vasp.res  300.vasp.res  303.vasp.res  304.vasp.res  305.vasp.res  308.vasp.res  311.vasp.res  315.vasp.res  317.vasp.res  318.vasp.res  319.vasp.res  320.vasp.res  321.vasp.res  322.vasp.res  323.vasp.res  326.vasp.res  327.vasp.res  331.vasp.res  332.vasp.res  335.vasp.res  338.vasp.res  340.vasp.res  341.vasp.res  (+68 more)
(+325 files in other folders)
